# cur_rules

./: CHANGELOG.md  MANIFEST.in  README.rst  compose.yml  package-lock.json  pyproject.toml
.github/scripts/: update_version.py
cur_rules/resources/.cursor/rules/: rule.mdc
cur_rules/resources/rules/: rule.mdc
docs/source/: conf.py  index.rst
